Fix: TransientPropertyValueException ao registrar.