@@ -12,7 +12,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -20,22 +19,17 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
 class SignupUseCaseTest {
-    private final RebelRepositoryInMemory rebelRepo = new RebelRepositoryInMemory();
-    private final InventoryRepositoryInMemory inventoryRepo = new InventoryRepositoryInMemory();
-    private final LocationRepositoryInMemory locationRepo = new LocationRepositoryInMemory();
-    private final ItemRepositoryInMemory itemRepo = new ItemRepositoryInMemory();
-    private final SignupUseCase signupUseCase = new SignupUseCase(rebelRepo, locationRepo, inventoryRepo, itemRepo);
+    private final RebelRepositoryInMemory rebelRepoInMem = new RebelRepositoryInMemory();
+    private final InventoryRepositoryInMemory inventoryRepoInMem = new InventoryRepositoryInMemory();
+    private final LocationRepositoryInMemory locationRepoInMem = new LocationRepositoryInMemory();
+    private final ItemRepositoryInMemory itemRepoInMem = new ItemRepositoryInMemory();
+    private final SignupUseCase signupUseCase = new SignupUseCase(rebelRepoInMem, locationRepoInMem, inventoryRepoInMem, itemRepoInMem);
     private final Rebel luke = new Rebel("luke", 18, "male");
     private final Rebel leia = new Rebel("leia", 30, "female");
-    private final Rebel hanSolo = new Rebel("han solo", 18, "male");
     private final Location lukeLocation = new Location(0.2, 21.3, "base/galaxy");
     private final Location leiaLocation = new Location(0.2, 21.3, "base/galaxy");
-    private final Location hanSoloLocation = new Location(24.1, 42.1, "base");
-    private final Inventory lukeInv = new Inventory(new ArrayList<>( List.of( new Item("doritos", 1)) ));
-    private final Inventory leiaInv = new Inventory(new ArrayList<>( List.of( new Item("water", 2)) ));
-    private final Inventory hanSoloInventory = new Inventory(new ArrayList<>(Arrays.asList(( new Item("doritos", 1)),
-            new Item("doritos", 1))
-            ));
+    private final Inventory lukeInv = new Inventory(new ArrayList<>(List.of(new Item("doritos", 1))));
+    private final Inventory leiaInv = new Inventory(new ArrayList<>(List.of(new Item("water", 2))));
 
     @BeforeEach
     public void setUp() {
@@ -45,21 +39,27 @@ class SignupUseCaseTest {
 
     @Test
     void should_save_rebel() {
-        assertNotEquals(Optional.empty(), rebelRepo.findById(luke.getId()));
+        luke.setId(1);
+        rebelRepoInMem.saveInMem(luke);
+        assertNotEquals(Optional.empty(), rebelRepoInMem.findById(luke.getId()));
     }
 
     @Test
     void should_save_location() {
-        assertNotEquals(Optional.empty(), locationRepo.findById(lukeLocation.getId()));
+        lukeLocation.setId(1);
+        locationRepoInMem.saveInMem(lukeLocation);
+        assertNotEquals(Optional.empty(), locationRepoInMem.findById(lukeLocation.getId()));
     }
 
     @Test
     void should_save_inventory() {
-        assertNotEquals(Optional.empty(), inventoryRepo.findById(lukeInv.getId()));
+        lukeInv.setId(1);
+        inventoryRepoInMem.saveInMem(lukeInv);
+        assertNotEquals(Optional.empty(), inventoryRepoInMem.findById(lukeInv.getId()));
     }
 
     @Test
     void should_save_items() {
-        assertFalse(itemRepo.findAll().isEmpty());
+        assertFalse(itemRepoInMem.findAll().isEmpty());
     }
 }
